3tiercloudformation.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Create a 3-tier Architecture",
    "Parameters": {
      "VpcCidr": {
        "Type": "String",
        "Description": "CIDR block for the VPC",
        "Default": "10.0.0.0/16"
      }
    },
    "Resources": {
      "VPC": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": "VpcCidr",
          "EnableDnsSupport": true,
          "EnableDnsHostnames": true
        }
      },
      "PublicSubnet1": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": "VPC",
          "CidrBlock": "10.0.1.0/24",
          "AvailabilityZone": "us-east-1a",
          "MapPublicIpOnLaunch": true
        }
      },
      "PublicSubnet2": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": "VPC",
          "CidrBlock": "10.0.2.0/24",
          "AvailabilityZone": "us-east-1b",
          "MapPublicIpOnLaunch": true
        }
      },
      "PrivateSubnet1": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": "VPC",
          "CidrBlock": "10.0.3.0/24",
          "AvailabilityZone": "us-east-1a"
        }
      },
      "PrivateSubnet2": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": "VPC",
          "CidrBlock": "10.0.4.0/24",
          "AvailabilityZone": "us-east-1b"
        }
      },
      "PublicRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": "VPC"
        }
      },
      "PrivateRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": "VPC"
        }
      },
      "PublicSubnetRouteTableAssociation1": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": "PublicSubnet1",
          "RouteTableId": "PublicRouteTable"
        }
      },
      "PublicSubnetRouteTableAssociation2": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": "PublicSubnet2",
          "RouteTableId": "PublicRouteTable"
        }
      },
      "PrivateSubnetRouteTableAssociation1": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": "PrivateSubnet1",
          "RouteTableId": "PrivateRouteTable"
        }
      },
      "PrivateSubnetRouteTableAssociation2": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": "PrivateSubnet2",
          "RouteTableId": "PrivateRouteTable"
        }
      },
      "EC2WebServerSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "EC2 Web Server Security Group",
          "VpcId": "VPC",
          "SecurityGroupIngress": [
            {
              "IpProtocol": "tcp",
              "FromPort": "80",
              "ToPort": "80",
              "CidrIp": "0.0.0.0/0"
            }
          ]
        }
      },
      "EC2ApplicationServerSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "EC2 Application Server Security Group",
          "VpcId": "VPC",
          "SecurityGroupIngress": [
            {
              "IpProtocol": "tcp",
              "FromPort": "80",
              "ToPort": "80",
              "SourceSecurityGroupId": "EC2WebServerSecurityGroup"
            }
          ]
        }
      },
      "ASGWebTier": {
        "Type": "AWS::AutoScaling::AutoScalingGroup",
        "Properties": {
          "VPCZoneIdentifier": [
            "PublicSubnet1",
            "PublicSubnet2"
          ],
          "LaunchConfigurationName": "LaunchConfigWebTier",
          "MinSize": "2",
          "MaxSize": "2"
        }
      },
      "LaunchConfigWebTier": {
        "Type": "AWS::AutoScaling::LaunchConfiguration",
        "Properties": {
          "ImageId": "ami-005f9685cb30f234b",
          "InstanceType": "t2.micro",
          "SecurityGroups": [
            "EC2ApplicationServerSecurityGroup"
          ]
        }
      }
    },
    "Outputs": {
      "VPCId": {
        "Description": "VPC Id",
        "Value": {
          "Ref": "VPC"
        }
      },
      "PublicSubnet1": {
        "Description": "Public Subnet1",
        "Value": {
          "Ref": "PublicSubnet1"
        }
      },
      "PublicSubnet2": {
        "Description": "Public Subnet2",
        "Value": {
          "Ref": "PublicSubnet2"
        }
      },
      "PrivateSubnet1": {
        "Description": "Private Subnet1",
        "Value": {
          "Ref": "PrivateSubnet1"
        }
      },
      "PrivateSubnet2": {
        "Description": "Private Subnet2",
        "Value": {
          "Ref": "PrivateSubnet2"
        }
      }
    }
  }
